# fly

./: .clang-format  .dockerignore  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GTest.CMakeLists.txt  README.md  build.sh  build_compiler.ps1  build_compiler.sh  ci-build.sh  codegen_test.sh  compiler.sh  docker-build.sh  install_prerequisites.ps1  milestone_test.sh  test_compiler.ps1  test_compiler.sh
compiler/: CMakeLists.txt  Fly.cpp  Fly.fly
compiler/AST/: ASTArg.cpp  ASTAttribute.cpp  ASTBase.cpp  ASTBinary.cpp  ASTBlockStmt.cpp  ASTBreakStmt.cpp  ASTBuilder.cpp  ASTBuilderIfStmt.cpp  ASTBuilderLoopInStmt.cpp  ASTBuilderLoopStmt.cpp  ASTBuilderStmt.cpp  ASTBuilderSwitchStmt.cpp  ASTCall.cpp  ASTCaseStmt.cpp  ASTCast.cpp  ASTClass.cpp  ASTComment.cpp  ASTContinueStmt.cpp  ASTDeclStmt.cpp  ASTDeleteStmt.cpp  ASTEnum.cpp  ASTEnumEntry.cpp  ASTExpr.cpp  ASTExprStmt.cpp  ASTFailStmt.cpp  ASTFunction.cpp  ASTHandleStmt.cpp  ASTIdentifier.cpp  ASTIfStmt.cpp  ASTImport.cpp  ASTLocalVar.cpp  ASTLoopInStmt.cpp  ASTLoopStmt.cpp  ASTMember.cpp  ASTMethod.cpp  ASTModifier.cpp  ASTModule.cpp  ASTName.cpp  ASTNameSpace.cpp  ASTNode.cpp  (+11 more)
compiler/Basic/: Archiver.cpp  Builtins.cpp  CharInfo.cpp  CodeGenOptions.cpp  Cuda.cpp  Diagnostic.cpp  DiagnosticIDs.cpp  DiagnosticOptions.cpp  FileManager.cpp  FileSystemStatCache.cpp  FixedPoint.cpp  IdentifierTable.cpp  Logger.cpp  Module.cpp  OperatorPrecedence.cpp  SanitizerBlacklist.cpp  SanitizerSpecialCaseList.cpp  Sanitizers.cpp  SourceLocation.cpp  SourceManager.cpp  Stack.cpp  TargetInfo.cpp  Targets.cpp  TokenKinds.cpp  Warnings.cpp
compiler/CodeGen/: BackendUtil.cpp  CodeGen.cpp  CodeGenArrayValue.cpp  CodeGenBridgeCLang.cpp  CodeGenCLangBridge.cpp  CodeGenClass.cpp  CodeGenClassMethod.cpp  CodeGenEnum.cpp  CodeGenEnumEntry.cpp  CodeGenError.cpp  CodeGenExpr.cpp  CodeGenFunction.cpp  CodeGenFunctionBase.cpp  CodeGenHandle.cpp  CodeGenHeader.cpp  CodeGenHelper.cpp  CodeGenModule.cpp  CodeGenStdLibCLang.cpp  CodeGenStdLibLLVM.cpp  CodeGenStdLibRuntime.cpp  CodeGenType.cpp  CodeGenVar.cpp
compiler/Driver/: Driver.cpp  DriverOptions.cpp  ToolChain.cpp
compiler/Frontend/: ChainedDiagnosticConsumer.cpp  CompilerInstance.cpp  DiagnosticRenderer.cpp  Frontend.cpp  FrontendOptions.cpp  InputFile.cpp  LogDiagnosticPrinter.cpp  TextDiagnostic.cpp  TextDiagnosticBuffer.cpp  TextDiagnosticPrinter.cpp
compiler/Parser/: Lexer.cpp  LiteralSupport.cpp  Parser.cpp  ParserClass.cpp  ParserEnum.cpp  ParserExpr.cpp  ParserFunction.cpp
compiler/Sema/: Helper.cpp  Registry.cpp  Resolver.cpp  SemaAlloc.cpp  SemaBinary.cpp  SemaBlockStmt.cpp  SemaBreakStmt.cpp  SemaBuilder.cpp  SemaBuilderModifiers.cpp  SemaBuiltin.cpp  SemaCall.cpp  SemaCaseStmt.cpp  SemaCast.cpp  SemaClassAttribute.cpp  SemaClassInstance.cpp  SemaClassMethod.cpp  SemaClassType.cpp  SemaComment.cpp  SemaContext.cpp  SemaContinueStmt.cpp  SemaDeclStmt.cpp  SemaDeleteStmt.cpp  SemaEnumAccessor.cpp  SemaEnumEntry.cpp  SemaEnumList.cpp  SemaEnumType.cpp  SemaErrorHandler.cpp  SemaExpr.cpp  SemaExprStmt.cpp  SemaFailStmt.cpp  SemaFunction.cpp  SemaFunctionBase.cpp  SemaHandleStmt.cpp  SemaIfStmt.cpp  SemaImport.cpp  SemaLocalVar.cpp  SemaLoopInStmt.cpp  SemaLoopStmt.cpp  SemaMember.cpp  SemaModule.cpp  (+17 more)
compiler/ast/: ASTArg.fly  ASTAttribute.fly  ASTBase.fly  ASTBinary.fly  ASTBlockStmt.fly  ASTBreakStmt.fly  ASTBuilder.fly  ASTBuilderIfStmt.fly  ASTBuilderLoopInStmt.fly  ASTBuilderLoopStmt.fly  ASTBuilderStmt.fly  ASTBuilderSwitchStmt.fly  ASTCall.fly  ASTCaseStmt.fly  ASTCast.fly  ASTClass.fly  ASTComment.fly  ASTContinueStmt.fly  ASTDeclStmt.fly  ASTDeleteStmt.fly  ASTEnum.fly  ASTEnumEntry.fly  ASTExpr.fly  ASTExprStmt.fly  ASTFailStmt.fly  ASTFunction.fly  ASTHandleStmt.fly  ASTIdentifier.fly  ASTIfStmt.fly  ASTImport.fly  ASTKind.fly  ASTLocalVar.fly  ASTLoopInStmt.fly  ASTLoopStmt.fly  ASTMember.fly  ASTMethod.fly  ASTModifier.fly  ASTModule.fly  ASTName.fly  ASTNameSpace.fly  (+13 more)
compiler/basic/: CharInfo.fly  CodeGenOptions.fly  Diagnostic.fly  DiagnosticIDs.fly  DiagnosticOptions.fly  Logger.fly  OperatorPrecedence.fly  PartialDiagnostic.fly  SourceLocation.fly  SourceManager.fly  TokenKinds.fly
compiler/codegen/: CodeGenCall.fly  CodeGenClass.fly  CodeGenError.fly  CodeGenExpr.fly  CodeGenExprOps.fly  CodeGenLLVM.fly  CodeGenModule.fly  CodeGenStmt.fly  CodeGenType.fly  LLVMApi.fly  llvmapi.fly
compiler/driver/: Driver.fly  Frontend.fly  FrontendOptions.fly  ToolChain.fly
compiler/frontend/: ChainedDiagnosticConsumer.fly  CompilerInstance.fly  FileManager.fly  Frontend.fly  InputFile.fly  LogDiagnosticPrinter.fly  MemoryBuffer.fly  TextDiagnostic.fly  TextDiagnosticBuffer.fly  TextDiagnosticPrinter.fly
compiler/parser/: Lexer.fly  Parser.fly  ParserClass.fly  ParserEnum.fly  ParserExpr.fly  ParserFunction.fly  Token.fly
compiler/sema/: Registry.fly  Resolver.fly  ResolverCall.fly  ResolverClass.fly  ResolverDecl.fly  ResolverExpr.fly  ResolverStmt.fly  ResolverType.fly  SemaBinary.fly  SemaBlockStmt.fly  SemaBreakStmt.fly  SemaBuilder.fly  SemaBuilderModifiers.fly  SemaBuiltin.fly  SemaCall.fly  SemaCaseStmt.fly  SemaCast.fly  SemaClassAttribute.fly  SemaClassInstance.fly  SemaClassMethod.fly  SemaClassType.fly  SemaComment.fly  SemaContext.fly  SemaContinueStmt.fly  SemaDeclStmt.fly  SemaDeleteStmt.fly  SemaEnumAccessor.fly  SemaEnumEntry.fly  SemaEnumList.fly  (+35 more)
lib/: CMakeLists.txt  String.c  String.h  str.c
runtime/: CMakeLists.txt  Runtime.h
src/: CMakeLists.txt  Fly.cpp
std/: CMakeLists.txt  str.c  str.h
test/: ASTTest.cpp  AppTest.cpp  CMakeLists.txt  CmdTest.cpp  CodeGenTest.cpp  CompilerTest.cpp  ConfigTest.h.cmake  DriverTest.cpp  FrontendTest.cpp  HeaderMapTest.cpp  IdentifierParserTest.cpp  ImportLibTest.cpp  ImportTest.cpp  LexerTest.cpp  LibTest.cpp  ParserBadCode.cpp  ParserBlockTest.cpp  ParserClassTest.cpp  ParserExprTest.cpp  ParserTest.cpp  ParserTest.h  RuntimeTest.c  SingleFileBuildTest.cpp  TEST_NAMING_CONVENTION.md  TestConfig.h.cmake  TestMain.cpp  TestUtils.h  ToolChainTest.cpp
(+1493 files in other folders)
